test/errors/return_undefined.correct
This function returns undefined
null
